// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OcDrop renders tippy 1`] = `
<div>
  <p
    aria-expanded="true"
    id="trigger"
  >
    trigger
  </p>
  <div
    data-tippy-root=""
    id="tippy-3"
    style="z-index: 9999; visibility: visible; position: absolute; left: 0px; top: 0px; margin: 0px; bottom: 0px; transform: translate(0px, -10px);"
  >
    <div
      class="tippy-box"
      data-animation="fade"
      data-escaped=""
      data-placement="top"
      data-reference-hidden=""
      data-state="visible"
      data-theme="none"
      role="tooltip"
      style="max-width: 350px; transition-duration: 300ms;"
      tabindex="-1"
    >
      <div
        class="tippy-content"
        data-state="visible"
        style="transition-duration: 300ms;"
      >
        <div
          class="oc-drop"
          id="oc-drop-8"
        >
          <div
            class="uk-card uk-card-default uk-card-small uk-card-body"
          >
            show
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`OcDrop renders tippy 2`] = `
<div>
  <p
    aria-expanded="false"
    id="trigger"
  >
    trigger
  </p>
  <div
    data-tippy-root=""
    id="tippy-3"
    style="z-index: 9999; visibility: hidden; position: absolute; left: 0px; top: 0px; margin: 0px; bottom: 0px; transform: translate(0px, -10px); pointer-events: none;"
  >
    <div
      class="tippy-box"
      data-animation="fade"
      data-escaped=""
      data-placement="top"
      data-reference-hidden=""
      data-state="hidden"
      data-theme="none"
      role="tooltip"
      style="max-width: 350px; transition-duration: 250ms;"
      tabindex="-1"
    >
      <div
        class="tippy-content"
        data-state="hidden"
        style="transition-duration: 250ms;"
      >
        <div
          class="oc-drop"
          id="oc-drop-8"
        >
          <div
            class="uk-card uk-card-default uk-card-small uk-card-body"
          >
            show
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`OcDrop renders tippy 3`] = `
<div>
  <p
    aria-expanded="true"
    id="trigger"
  >
    trigger
  </p>
  <div
    data-tippy-root=""
    id="tippy-3"
    style="z-index: 9999; visibility: visible; position: absolute; left: 0px; top: 0px; margin: 0px; bottom: 0px; transform: translate(0px, -10px);"
  >
    <div
      class="tippy-box"
      data-animation="fade"
      data-escaped=""
      data-placement="top"
      data-reference-hidden=""
      data-state="visible"
      data-theme="none"
      role="tooltip"
      style="max-width: 350px; transition-duration: 300ms;"
      tabindex="-1"
    >
      <div
        class="tippy-content"
        data-state="visible"
        style="transition-duration: 300ms;"
      >
        <div
          class="oc-drop"
          id="oc-drop-8"
        >
          <div
            class="uk-card uk-card-default uk-card-small uk-card-body"
          >
            show
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
